--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -34,3 +34,17 @@
     border-color: #CED4DA;
   }
 }
+
+.form-input {
+  input.visible-input-search {
+    width: 50%;
+    margin-right: 0.5%;
+    justify-content: center;
+    height: 75%;
+    border-radius: 150px;
+    border: solid;
+    border-color: #CED4DA;
+    border-width: 0.05px;
+    padding-left: 20px;
+  }
+}
