user show 10%, finishing user cards

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -73,3 +73,29 @@
 .news-content {
   padding: 5px;
 }
+
+.card {
+  width: 200px;
+  height: 300px;
+  border-radius: 3px;
+}
+
+.card-avatar {
+  height:40%;
+  border: solid;
+}
+
+.card-username {
+  height:10%;
+  border: solid;
+}
+
+.card-user-stats {
+  height:35%;
+  border: solid;
+}
+
+.card-button {
+  height:15%;
+  border: solid;
+}
