--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -37,4 +37,21 @@
   transform: scale(1.01);
 }
 
+.card-button {
 
+  form {
+    height: 100%;
+  }
+
+  input {
+
+    width: 100%;
+    height: 100%;
+    border: solid;
+    border-color: #21B6A8;
+    color: #fff;
+    background-color: #21B6A8;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+}
