--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -20,12 +20,29 @@
 }
 
 
-.card-show-left-title{
+.card-show-left-title {
   background-color: #21B6A8;
-  border-radius: 50px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   color: white;
   height: 20%;
   width: 100%;
+  position: relative;
+
+  img {
+    height: 11px;
+    width: 11px;
+    opacity: 1px;
+    border: none;
+    margin-top: 14px;
+    margin-left: 10px;
+  }
+
+  .card-show-left-title-icon {
+    width: 10%;
+  }
+
+
 }
 
 .card-show-left-content {
@@ -36,9 +53,10 @@
 
 .card-show-left-content-first {
   padding-left: 2%;
-  padding-top: 2%;
+
   padding-bottom: 2%;
   margin-bottom: 5%;
+  border-left: 2px solid #21B6A8;
 }
 
 .card-show-left-content-first a {
@@ -57,13 +75,10 @@
 
 .card-show-left-news {
   width: 100%;
-  background-color: rgba(254, 255, 254, 0.611);
-  border-radius: 6px;
+  background-color: #FAFBFA;
+  border: 1px solid rgba(0, 0, 0, 0.125);
   color: rgb(99, 97, 97);
-  margin-bottom: 2%;
-  border: solid;
-  border-width: 2px;
-  border-color: #21B6A8;
+  border-top: none;
   a {
     color: rgb(99, 97, 97);
     text-decoration: none;
@@ -72,6 +87,8 @@
 
 .news-content {
   padding: 5px;
+  padding-left: 10px;
+  font-size: small;
 }
 
 .card {
@@ -131,6 +148,41 @@
 .nummber {
   p {
     font-size: 30px;
+    font-weight: bolder;
+    color: #21B6A8;
+  }
+}
+
+.sticky {
+  position: fixed;
+}
+
+
+.card-dashbaord {
+  width: 100%;
+  height: 50px;
+  background-color: #FAFBFA;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-top: none;
+}
+
+.card-avatar-dashboard {
+  height:40%;
+  min-height: 50px;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom: none;
+}
+
+.card-username-dashboard {
+  border: none;
+  margin: auto;
+}
+
+.favorite {
+  a {
+    text-decoration: none;
     font-weight: bolder;
     color: #21B6A8;
   }
