--- a/app/views/users/_user_card.html.erb
+++ b/app/views/users/_user_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" data-update-followers-target="card">
   <div class="card-avatar d-flex justify-content-center">
     <img src="https://i.pinimg.com/originals/6b/73/f5/6b73f582d6ba44e65ddea1ed0a073bc6.png" class="card-user-photo" alt="avatar">
   </div>
@@ -19,11 +19,13 @@
         <p><%= user.followers_as_follower.nil? ? 0 : user.followers_as_follower.count %></p>
       </div>
       <div class="d-flex justify-content-center">
-        <%= user.followers_as_follower != 1 ? "Followers" : "Follower" %>
+        <%= user.followeds_as_followed != 1 ? "Followers" : "Follower" %>
       </div>
     </div>
   </div>
-  <div class="card-button">
-    <%= button_to "Follow", new_follower_path(user.id) %>
+  <div class="card-button" >
+    <form action="/follower/2" data-action="submit->update-followers#updateFollowers" data-update-followers-target="form" class="favorite add">
+      <input type="submit" value="Add Favorite" class="form-favorites-input">
+    </form>
   </div>
 </div>
