--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5 d-flex justify-content-start">
+<div class="container mt-5 d-flex justify-content-start" data-controller="update-followers" >
   <% @users.each do |user| %>
    <%= render 'user_card', user: user%>
   <% end %>
