--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,62 +1,61 @@
 <div class="user-show d-flex justify-content-between">
     <div class="general-stats">
       <div class="card-show-left" >
-
-          <div class="card-show-left-title d-flex justify-content-center">
-            <h4 class="mt-1 mb-1">Prices</h4>
-          </div>
-          <div class="card-show-left-content-first mt-3">
-            <a href="https://www.coingecko.com/en/coins/bitcoin">
-              <div class="d-flex mb-1">
-                <span class="card-show-left-content-first-logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="Bitcoin logo"></span>
-                <span><strong>BTC</strong> price $<%= number_with_delimiter(@btc_usd.to_i, :delimiter => ',') %></span><br>
-              </div>
-            </a>
-            <a href="https://www.coingecko.com/en/coins/ethereum">
-              <div class="d-flex mb-1">
-              <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="Ethereum logo"></span>
-                <span><strong>ETH</strong> price $<%= number_with_delimiter(@eth_usd.to_i, :delimiter => ',') %></span><br>
-              </div>
-            </a>
-            <a href="https://www.coingecko.com/en/coins/axie-infinity">
-              <div class="d-flex mb-1">
-                <span class="card-show-left-content-first-logo"><img src="https://seeklogo.com/images/A/axie-infinity-axs-logo-57FE26A5DC-seeklogo.com.png" alt="Axs logo"></span>
-                <span><strong>AXS</strong> price $<%= number_with_delimiter(@axs_usd.to_i, :delimiter => ',') %></span><br>
-              </div>
-            </a>
-            <a href="https://www.coingecko.com/en/coins/smooth-love-potion">
-              <div class="d-flex mb-1">
-                <span class="card-show-left-content-first-logo"><img src="https://cryptologos.cc/logos/smooth-love-potion-slp-logo.png" alt="SLP logo"></span>
-                <span><strong>SLP</strong> price $<%= number_with_delimiter(@slp_usd.round(3), :delimiter => ',') %></span><br>
-              </div>
-            </a>
-            <a href="https://www.coingecko.com/en/coins/ronin">
-              <div class="d-flex">
-                <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/14101.png" alt="Ronin logo"></span>
-                <span><strong>RON</strong> price $<%= number_with_delimiter(@ron_usd.round(2), :delimiter => ',') %></span>
-              </div>
-            </a>
-          </div>
-
-      </div>
-      <div class="card-show-left">
-        <div class="card-show-left-title d-flex justify-content-center align-middle">
-          <h4 class="mt-1 mb-1">Axie in the News</h4>
+        <div class="card-show-left-content-first">
+          <a href="https://www.coingecko.com/en/coins/bitcoin">
+            <div class="d-flex mb-1">
+              <span class="card-show-left-content-first-logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="Bitcoin logo"></span>
+              <span><strong>BTC</strong> price $<%= number_with_delimiter(@btc_usd.to_i, :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://www.coingecko.com/en/coins/ethereum">
+            <div class="d-flex mb-1">
+            <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="Ethereum logo"></span>
+              <span><strong>ETH</strong> price $<%= number_with_delimiter(@eth_usd.to_i, :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://www.coingecko.com/en/coins/axie-infinity">
+            <div class="d-flex mb-1">
+              <span class="card-show-left-content-first-logo"><img src="https://seeklogo.com/images/A/axie-infinity-axs-logo-57FE26A5DC-seeklogo.com.png" alt="Axs logo"></span>
+              <span><strong>AXS</strong> price $<%= number_with_delimiter(@axs_usd.to_i, :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://www.coingecko.com/en/coins/smooth-love-potion">
+            <div class="d-flex mb-1">
+              <span class="card-show-left-content-first-logo"><img src="https://cryptologos.cc/logos/smooth-love-potion-slp-logo.png" alt="SLP logo"></span>
+              <span><strong>SLP</strong> price $<%= number_with_delimiter(@slp_usd.round(3), :delimiter => ',') %></span><br>
+            </div>
+          </a>
+          <a href="https://www.coingecko.com/en/coins/ronin">
+            <div class="d-flex">
+              <span class="card-show-left-content-first-logo"><img src="https://s2.coinmarketcap.com/static/img/coins/64x64/14101.png" alt="Ronin logo"></span>
+              <span><strong>RON</strong> price $<%= number_with_delimiter(@ron_usd.round(2), :delimiter => ',') %></span>
+            </div>
+          </a>
         </div>
-        <% until @article_count == 10 do %>
-          <div class="card-show-left-news mt-2 d-flex justify-content-start align-middle">
-            <a href="<%= @articles["results"][@article_count]["url"] %>" target="_blank">
-              <div class="mb-2 news-content">
-                🔥 <strong class="underline"><%= @articles["results"][@article_count]["title"] %></strong>
-              </div>
-              <div class="news-content">
-                Source: <%= @articles["results"][@article_count]["domain"] %><br>
-                Date: <%= @articles["results"][@article_count]["published_at"].to_date %>
-              </div>
-            </a>
-            <% @article_count +=1 %>
-          </div>
+      </div>
+      <div class="card-show-left favorite">
+        <div class="card-show-left-title d-flex justify-content-center">
+          <h4 class="mt-1 mb-1">Favorite Managers</h4>
+        </div>
+        <% if @user.followers_as_follower.present?  %>
+          <% @user.followers_as_follower.each do |favorite_instance| %>
+            <%= render 'favorites', favorite_instance: favorite_instance %>
+          <% end %>
         <% end %>
+      </div>
+      <div class="card-show-left" data-controller="display-info">
+        <div class="card-show-left-title d-flex justify-content-center">
+          <div class="card-show-left-title-letters d-flex justify-content-center">
+            <h4 class="mt-1 mb-1">Axie in the News</h4>
+            <img data-action="click->display-info#toggleContent" data-display-info-target="icon" class="plus" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.iconsdb.com%2Ficons%2Fpreview%2Fwhite%2Fplus-xxl.png&f=1&nofb=1" class="card-user-photo" alt="avatar">
+          </div>
+        </div>
+        <div data-display-info-target="content" class="d-none">
+          <% until @article_count == 10 do %>
+            <%= render 'articles', article_count: @article_count, articles: @articles %>
+          <% end %>
+        </div>
       </div>
     </div>
     <div class="user-stats">
