--- a/app/views/users/_user_card.html.erb
+++ b/app/views/users/_user_card.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="card-button" >
     <form action="/follower/2" data-action="submit->update-followers#updateFollowers" data-update-followers-target="form" class="favorite add">
-      <input type="submit" value="Add Favorite" class="form-favorites-input">
+      <input type="submit" value="Follow" class="form-favorites-input">
     </form>
   </div>
 </div>
