filter almost done, need javascript to update user averages

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,7 +4,7 @@
 }
 
 .number-size {
-  font-size: 50px;
+  font-size: 55px;
 }
 
 .card-summary span {
@@ -34,7 +34,7 @@
     width: 11px;
     opacity: 1px;
     border: none;
-    margin-top: 14px;
+    margin-top: 12px;
     margin-left: 10px;
   }
 
@@ -87,7 +87,8 @@
 
 .news-content {
   padding: 5px;
-  padding-left: 10px;
+  padding-left: 7px;
+  padding-right: 7px;
   font-size: small;
 }
 
