--- a/app/views/teams/_list_teams.html.erb
+++ b/app/views/teams/_list_teams.html.erb
@@ -1,5 +1,5 @@
 <div  data-controller="update-users" data-update-users-target="scholar">
-  <div class = "row">
+  <div class = "index-row">
     <div class= "d-flex">
       <div class="table-input d-flex align-items-center justify-content-left m-1">
         <% if current_user == team.user %>
