--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -49,3 +49,42 @@
   }
 }
 
+.user-show-filter {
+
+  justify-content: center;
+
+  .form-input {
+
+    width: 25%;
+
+    input.visible-input-index {
+      display: block;
+      padding: 0.375rem 0.75rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #0E0000;
+      background-color: #F4F4F4;
+      background-clip: padding-box;
+      border: 1px solid #ced4da;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      margin-right: 0.5vw;
+      justify-content: center;
+      height: 60%;
+      border-radius: 150px;
+
+    }
+
+    label {
+      width: 100%;
+      margin-right: 0.5vw;
+      text-align: center;
+      color: #21B6A8;
+      font-size: medium;
+      font-weight: 500;
+    }
+  }
+}
