--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -105,7 +105,7 @@
               </div>
             </div>
           </div>
-          <div class="scholars-breakdown" id="results" >
+          <div class="scholars-breakdown mt-3" id="results" >
             <% @user.teams.each do |team| %>
               <%= render 'teams/list_teams', team: team %>
             <% end %>
