--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -44,7 +44,7 @@
       </div>
     </form>
   </div>
-  <div class="container mt-5 d-flex justify-content-start" data-controller="update-followers" >
+  <div class="container mt-5 d-flex justify-content-start">
     <div class="row">
       <div class="grid">
         <% @users.each do |user| %>
