--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,8 @@
 .navbar-axie {
   justify-content: space-between;
-  background: #f4f4f4fa;
+  background: white;
   position: sticky;
   top: 0px;
-  padding-inline: 45px;
   z-index: 999;
 }
 
