--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -12,7 +12,6 @@
 }
 
 .card-show-left {
-  width: 95%;
   background-color: transparent;
   border-radius: 6px;
   color: rgb(99, 97, 97);
@@ -56,7 +55,6 @@
 
   padding-bottom: 2%;
   margin-bottom: 5%;
-  border-left: 2px solid #21B6A8;
 }
 
 .card-show-left-content-first a {
@@ -75,7 +73,6 @@
 
 .card-show-left-news {
   width: 100%;
-  background-color: #FAFBFA;
   border: 1px solid rgba(0, 0, 0, 0.125);
   color: rgb(99, 97, 97);
   border-top: none;
@@ -95,7 +92,7 @@
 .card {
   width: 200px;
   border-radius: 10px;
-  background-color: #FAFBFA;
+  background-color: transparent;
   border: none;
 }
 
@@ -161,7 +158,6 @@
 .card-dashbaord {
   width: 100%;
   height: 50px;
-  background-color: #FAFBFA;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-top: none;
 }
@@ -178,12 +174,13 @@
 .card-username-dashboard {
   border: none;
   margin: auto;
+  margin-right: 5px;
+  margin-left: -5px;
 }
 
 .favorite {
   a {
     text-decoration: none;
-    font-weight: bolder;
     color: #21B6A8;
   }
 }
