--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,16 @@
 <div class="user-show d-flex justify-content-between">
     <div class="general-stats">
-      <div class="card-show-left mb-4" >
+      <div class="card-show-left favorite">
+        <div class="card-show-left-title d-flex justify-content-center">
+          <strong class="mt-1 mb-1">Favorite Managers</strong>
+        </div>
+        <% if @user.followers_as_follower.present?  %>
+          <% @user.followers_as_follower.each do |favorite_instance| %>
+            <%= render 'favorites', favorite_instance: favorite_instance %>
+          <% end %>
+        <% end %>
+      </div>
+      <div class="card-show-left mt-4 mb-4" >
         <div class="card-show-left-content-first">
           <a href="https://www.coingecko.com/en/coins/bitcoin">
             <div class="d-flex mb-1">
@@ -34,24 +44,14 @@
           </a>
         </div>
       </div>
-      <div class="card-show-left favorite">
-        <div class="card-show-left-title d-flex justify-content-center">
-          <strong class="mt-1 mb-1">Favorite Managers</strong>
-        </div>
-        <% if @user.followers_as_follower.present?  %>
-          <% @user.followers_as_follower.each do |favorite_instance| %>
-            <%= render 'favorites', favorite_instance: favorite_instance %>
-          <% end %>
-        <% end %>
-      </div>
       <div class="card-show-left" data-controller="display-info">
         <div class="card-show-left-title d-flex justify-content-center">
           <div class="card-show-left-title-letters d-flex justify-content-center">
             <strong class="mt-1 mb-1">Axie in the News</strong>
-            <img data-action="click->display-info#toggleContent" data-display-info-target="icon" class="plus" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.iconsdb.com%2Ficons%2Fpreview%2Fwhite%2Fplus-xxl.png&f=1&nofb=1" class="card-user-photo" alt="avatar">
+            <img data-action="click->display-info#toggleContent" data-display-info-target="icon" class="minus" src="https://iconsplace.com/wp-content/uploads/_icons/ffffff/256/png/minus-2-icon-18-256.png" class="card-user-photo" alt="avatar">
           </div>
         </div>
-        <div data-display-info-target="content" class="d-none">
+        <div data-display-info-target="content" class="">
           <% until @article_count == 10 do %>
             <%= render 'articles', article_count: @article_count, articles: @articles %>
           <% end %>
